--- a/PatientRecordsModule/Shared.PatientRecords.csproj
+++ b/PatientRecordsModule/Shared.PatientRecords.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{5B63C016-181B-49E5-9B91-9120A78EBF72}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PatientRecordsModule</RootNamespace>
-    <AssemblyName>PatientRecordsModule</AssemblyName>
+    <RootNamespace>Shared.PatientRecords</RootNamespace>
+    <AssemblyName>Shared.PatientRecords</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\</SolutionDir>
@@ -138,7 +138,7 @@
     <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Misc\SuggestionProviders\MKBSuggestionProvider.cs" />
     <Compile Include="Misc\SuggestionProviders\SuggestionProviderNames.cs" />
-    <Compile Include="Module.cs" />
+    <Compile Include="PatientRecords.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\DocumentService.cs" />
     <Compile Include="Services\Implementations\PatientRecordsService.cs" />
