Updated view mode for assignments, records and visits
Some minor changes

--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -105,6 +105,7 @@
     <Compile Include="Controls\TreeViewComboBox.xaml.cs">
       <DependentUpon>TreeViewComboBox.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Converters\BoolToCollapsedConverter.cs" />
     <Compile Include="Converters\BoolToInvisibilityConverter.cs" />
     <Compile Include="Converters\CompletedToColorConverter.cs" />
     <Compile Include="Converters\BoolToWindowStateConverter.cs" />
