--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -131,9 +131,6 @@
     <Resource Include="Resources\Images\File_Word.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Images\VisitAdd48x48.png" />
-  </ItemGroup>
-  <ItemGroup>
     <Resource Include="Resources\Images\VisitEdit48x48.png" />
     <Resource Include="Resources\Images\VisitRemove48x48.png" />
   </ItemGroup>
@@ -161,9 +158,6 @@
   <ItemGroup>
     <Resource Include="Resources\Images\AttachFile48x48.png" />
     <Resource Include="Resources\Images\DetachFile48x48.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="Resources\Images\RecordAdd48x48.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\DocumentImport48x48.png" />
@@ -203,6 +197,16 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Images\Star16x16.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\AnalyseAdd48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\AssignmentAdd48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\RecordAdd48x48.png" />
+    <Resource Include="Resources\Images\VisitAdd48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
