Closed #97 - Finished work related to patient photo

--- a/PatientSearchModule/PatientSearchModule.csproj
+++ b/PatientSearchModule/PatientSearchModule.csproj
@@ -107,6 +107,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Converters\PatientGenderToImageSourceConverter.cs" />
     <Compile Include="Misc\PatientSearchQuery.cs" />
     <Compile Include="Model\User Input Processing\Search Expression Providers\PersonBirthDateSearchExpressionProvider.cs" />
     <Compile Include="Model\User Input Processing\Input Normalization\IUserInputNormalizer.cs" />
