--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -78,6 +78,7 @@
     <Compile Include="Misc\TimeIntervals\TimeIntervalCollection.cs" />
     <Compile Include="Misc\Validation\IActiveDataErrorInfo.cs" />
     <Compile Include="Misc\Validation\ValidationMediator.cs" />
+    <Compile Include="Misc\WinApiInteraction.cs" />
     <Compile Include="Properties\Annotations.cs" />
     <Compile Include="Services\Interfaces\ICacheService.cs" />
     <Compile Include="Expressions\ISearchExpressionProvider.cs" />
