--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -109,6 +109,7 @@
     <Compile Include="Converters\BoolToInvisibilityConverter.cs" />
     <Compile Include="Converters\CompletedToColorConverter.cs" />
     <Compile Include="Converters\BoolToWindowStateConverter.cs" />
+    <Compile Include="Converters\CommandMultiValueConverter.cs" />
     <Compile Include="Converters\ReversedBoolConverter.cs" />
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="Converters\BoolToVisibilityConverter.cs" />
