--- a/Shell.Shared/Shell.Shared.csproj
+++ b/Shell.Shared/Shell.Shared.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApplicationSettings.cs" />
+    <Compile Include="PrivilegeRequiredAttribute.cs" />
     <Compile Include="RegionNames.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WellKnownModuleNames.cs" />
