--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -83,7 +83,6 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Classes\PermissionType.cs" />
     <Compile Include="Classes\RecordTypesTreeQueryItem.cs" />
     <Compile Include="Classes\UserSystemInfo.cs" />
     <Compile Include="CommissionDecision.cs">
@@ -142,6 +141,14 @@
     <Compile Include="Misc\EmptyDbAsyncEnumerator.cs" />
     <Compile Include="Misc\EmptyDbAsyncQueryProvider.cs" />
     <Compile Include="Misc\IDisposableQueryable.cs" />
+    <Compile Include="PartialClasses\Permission.cs" />
+    <Compile Include="PartialClasses\PermissionGroup.cs" />
+    <Compile Include="PermissionGroup.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
+    <Compile Include="PermissionGroupMembership.cs">
+      <DependentUpon>ChildCareModel.tt</DependentUpon>
+    </Compile>
     <Compile Include="RecordEquipment.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
@@ -267,9 +274,6 @@
     <Compile Include="Permission.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="PermissionLink.cs">
-      <DependentUpon>ChildCareModel.tt</DependentUpon>
-    </Compile>
     <Compile Include="Person.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
@@ -361,7 +365,7 @@
     <Compile Include="UserMessageType.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
-    <Compile Include="UserPermission.cs">
+    <Compile Include="UserPermisionGroup.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Visit.cs">
