--- a/PatientRecordsModule/packages.config
+++ b/PatientRecordsModule/packages.config
@@ -7,5 +7,6 @@
   <package id="log4net" version="2.0.4" targetFramework="net45" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
+  <package id="System.Windows.Controls.DataVisualization.Toolkit" version="4.0.0.0" targetFramework="net45" />
   <package id="Unity" version="4.0.1" targetFramework="net45" />
 </packages>
