Closes #121 - finished work on input helpers and validators for Russian identity documents

--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -118,9 +118,10 @@
     <Compile Include="Data\SavePatientInput.cs" />
     <Compile Include="Data\SavePatientOutput.cs" />
     <Compile Include="Misc\Common.cs" />
+    <Compile Include="Misc\InputHelpers\RussianBirthCertificateSeriesInputHelper.cs" />
     <Compile Include="Misc\ItemTemplateSelector.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
-    <Compile Include="Misc\StringProcessors\SnilsInputHelper.cs" />
+    <Compile Include="Misc\InputHelpers\SnilsInputHelper.cs" />
     <Compile Include="Misc\SuggestionProviders\AddressSuggestionProvider.cs" />
     <Compile Include="Misc\SuggestionProviders\IAddressSuggestionProvider.cs" />
     <Compile Include="Misc\SuggestionProviders\DisabilityDocumentGivenOrgSuggestionProvider.cs" />
