--- a/PatientRecordsModule/Shared.PatientRecords.csproj
+++ b/PatientRecordsModule/Shared.PatientRecords.csproj
@@ -130,6 +130,8 @@
     <Compile Include="DTOs\BrigadeDTO.cs" />
     <Compile Include="DTOs\CommonRecordAssignmentDTO.cs" />
     <Compile Include="Misc\BindingProxy.cs" />
+    <Compile Include="Misc\PersonItem.cs" />
+    <Compile Include="ViewModels\PersonHierarchicalItemViewModels\IHierarchicalItem.cs" />
     <Compile Include="Misc\IRecordTypeEditorResolver.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
     <Compile Include="Misc\ChartPoint.cs" />
@@ -172,9 +174,9 @@
     <Compile Include="ViewModels\PersonRecordEditorViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordsViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordsHeaderViewModel.cs" />
-    <Compile Include="ViewModels\PersonHierarchicalAssignmentsViewModel.cs" />
-    <Compile Include="ViewModels\PersonHierarchicalRecordsViewModel.cs" />
-    <Compile Include="ViewModels\PersonHierarchicalVisitsViewModel.cs" />
+    <Compile Include="ViewModels\PersonHierarchicalItemViewModels\PersonHierarchicalAssignmentsViewModel.cs" />
+    <Compile Include="ViewModels\PersonHierarchicalItemViewModels\PersonHierarchicalRecordsViewModel.cs" />
+    <Compile Include="ViewModels\PersonHierarchicalItemViewModels\PersonHierarchicalVisitsViewModel.cs" />
     <Compile Include="ViewModels\PersonRecordListViewModel.cs" />
     <Compile Include="Views\Diagnoses\DiagnosesView.xaml.cs">
       <DependentUpon>DiagnosesView.xaml</DependentUpon>
