--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -95,6 +95,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Behaviors\DependentCollectionNavigationBehavior.cs" />
     <Compile Include="Behaviors\DataContextPropagationBehavior.cs" />
     <Compile Include="Behaviors\FocusAdvancement.cs" />
     <Compile Include="Behaviors\IgnoreMouseWheelBehavior.cs" />
