Closes #79 - now user get notification if such patient already exists

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -136,6 +136,7 @@
     <Compile Include="FinancingSource.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Misc\DbContextProviderExtensions.cs" />
     <Compile Include="Misc\DisposableQueryable.cs" />
     <Compile Include="Misc\EmptyDbAsyncEnumerable.cs" />
     <Compile Include="Misc\EmptyDbAsyncEnumerator.cs" />
