--- a/PatientInfoModule/PatientInfoModule.csproj
+++ b/PatientInfoModule/PatientInfoModule.csproj
@@ -118,6 +118,8 @@
     <Compile Include="Data\SavePatientInput.cs" />
     <Compile Include="Data\SavePatientOutput.cs" />
     <Compile Include="Misc\Common.cs" />
+    <Compile Include="Misc\CurrentPatientHasRelativeCheckEventArgs.cs" />
+    <Compile Include="Misc\DuplicatePersonCheckParameters.cs" />
     <Compile Include="Misc\InputHelpers\RussianBirthCertificateSeriesInputHelper.cs" />
     <Compile Include="Misc\ItemTemplateSelector.cs" />
     <Compile Include="Misc\ParameterNames.cs" />
