Closes #147 - NotificationService address is added to DBSettings table

--- a/Core.Data/Core.Data.csproj
+++ b/Core.Data/Core.Data.csproj
@@ -175,6 +175,7 @@
     <Compile Include="MedicalHelpType.cs">
       <DependentUpon>ChildCareModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="Misc\DataNotFoundException.cs" />
     <Compile Include="Misc\DbContextProviderExtensions.cs" />
     <Compile Include="Misc\DisposableQueryable.cs" />
     <Compile Include="Misc\EmptyDbAsyncEnumerable.cs" />
