--- a/Core.Notification/app.config
+++ b/Core.Notification/app.config
@@ -1,25 +1,11 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <system.serviceModel>
-    <services>
-      <service name="WcfNotificationService.NotificationServiceEngine">
-        <host>
-          <baseAddresses>
-            <add baseAddress = "net.tcp://localhost:8733/NotificationServiceEngine" />
-          </baseAddresses>
-        </host>
-        <endpoint address=""
-                  binding="netTcpBinding"
-                  contract="WcfNotificationService.INotificationServiceEngine">
-        </endpoint>
-      </service>
-    </services>
-    <behaviors>
-      <serviceBehaviors>
-        <behavior>
-          <serviceDebug includeExceptionDetailInFaults="False" />
-        </behavior>
-      </serviceBehaviors>
-    </behaviors>
+    <client>
+      <endpoint address=""
+                binding="netTcpBinding"
+                contract="NotificationServiceEngine.INotificationServiceEngine">
+      </endpoint>
+    </client>
   </system.serviceModel>
 </configuration>
