--- a/Shell/App.config
+++ b/Shell/App.config
@@ -16,6 +16,14 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <system.serviceModel>
+    <client>
+      <endpoint address=""
+                binding="netTcpBinding"
+                contract="NotificationServiceEngine.INotificationServiceEngine">
+      </endpoint>
+    </client>
+  </system.serviceModel>
   <connectionStrings>
     <add name="ModelContext" connectionString="metadata=res://*/ChildCareModel.csdl|res://*/ChildCareModel.ssdl|res://*/ChildCareModel.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ChildCare;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
