#143 - added context menu to Ribbon. Further work is blocked by visual bugs in Ribbon

--- a/Shell/Shell.csproj
+++ b/Shell/Shell.csproj
@@ -130,6 +130,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="RibbonEx.cs" />
     <Compile Include="ShellWindowViewModel.cs" />
     <Compile Include="ConventionBasedViewNameResolver.cs" />
     <Page Include="ShellWindow.xaml">
