--- a/Shell/App.config
+++ b/Shell/App.config
@@ -4,6 +4,9 @@
     <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler, log4net" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+      <section name="Shell.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+    </sectionGroup>
   </configSections>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -64,4 +67,11 @@
     <add key="CurrentLpuName" value="Больница №1" />
     <add key="DefaultRecordTypeTime" value="8:00 - 12:00, 13:00 - 17:00" />
   </appSettings>
+  <userSettings>
+    <Shell.Properties.Settings>
+      <setting name="FakeSetting" serializeAs="String">
+        <value>x</value>
+      </setting>
+    </Shell.Properties.Settings>
+  </userSettings>
 </configuration>
