--- a/Shared/Shared.Patient/packages.config
+++ b/Shared/Shared.Patient/packages.config
@@ -7,6 +7,10 @@
   <package id="AForge.Video" version="2.2.5" targetFramework="net45" />
   <package id="AForge.Video.DirectShow" version="2.2.5" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="Extended.Wpf.Toolkit" version="2.5" targetFramework="net45" />
+  <package id="log4net" version="2.0.5" targetFramework="net45" />
   <package id="Prism.Core" version="6.1.0" targetFramework="net45" />
   <package id="Prism.Wpf" version="6.1.0" targetFramework="net45" />
+  <package id="Unity" version="4.0.1" targetFramework="net45" />
 </packages>
