--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -55,6 +55,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Threading" />
     <Reference Include="System.Threading.Tasks" />
     <Reference Include="System.Xml.Linq" />
@@ -99,6 +100,65 @@
     <Compile Include="Misc\Validation\ValidationMediator.cs" />
     <Compile Include="Misc\WinApiInteraction.cs" />
     <Compile Include="Properties\Annotations.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\AreaSettings.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\Capability.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\CapabilityResult.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\DataSource.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\DataSourceManager.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\Diagnostics.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\FeederEmptyException.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\IWindowsMessageHook.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\PageSettings.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\ResolutionSettings.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\RotationSettings.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\ScanningCompleteEventArgs.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\ScanSettings.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\TransferImageEventArgs.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\Twain.cs" />
+    <Compile Include="ScanAPI\TwainDotNet\TwainException.cs" />
+    <Compile Include="ScanAPI\TwainNative\AutoSize.cs" />
+    <Compile Include="ScanAPI\TwainNative\Capabilities.cs" />
+    <Compile Include="ScanAPI\TwainNative\CapabilityArrayValue.cs" />
+    <Compile Include="ScanAPI\TwainNative\CapabilityEnumValue.cs" />
+    <Compile Include="ScanAPI\TwainNative\CapabilityOneValue.cs" />
+    <Compile Include="ScanAPI\TwainNative\Command.cs" />
+    <Compile Include="ScanAPI\TwainNative\Compression.cs" />
+    <Compile Include="ScanAPI\TwainNative\ConditionCode.cs" />
+    <Compile Include="ScanAPI\TwainNative\ContainerType.cs" />
+    <Compile Include="ScanAPI\TwainNative\Country.cs" />
+    <Compile Include="ScanAPI\TwainNative\DataArgumentType.cs" />
+    <Compile Include="ScanAPI\TwainNative\DataGroup.cs" />
+    <Compile Include="ScanAPI\TwainNative\Duplex.cs" />
+    <Compile Include="ScanAPI\TwainNative\Event.cs" />
+    <Compile Include="ScanAPI\TwainNative\Fix32.cs" />
+    <Compile Include="ScanAPI\TwainNative\FlipRotation.cs" />
+    <Compile Include="ScanAPI\TwainNative\Frame.cs" />
+    <Compile Include="ScanAPI\TwainNative\Identity.cs" />
+    <Compile Include="ScanAPI\TwainNative\ImageFileFormat.cs" />
+    <Compile Include="ScanAPI\TwainNative\ImageInfo.cs" />
+    <Compile Include="ScanAPI\TwainNative\ImageLayout.cs" />
+    <Compile Include="ScanAPI\TwainNative\Language.cs" />
+    <Compile Include="ScanAPI\TwainNative\Message.cs" />
+    <Compile Include="ScanAPI\TwainNative\Orientation.cs" />
+    <Compile Include="ScanAPI\TwainNative\PageType.cs" />
+    <Compile Include="ScanAPI\TwainNative\PendingXfers.cs" />
+    <Compile Include="ScanAPI\TwainNative\PixelType.cs" />
+    <Compile Include="ScanAPI\TwainNative\Status.cs" />
+    <Compile Include="ScanAPI\TwainNative\TransferMechanism.cs" />
+    <Compile Include="ScanAPI\TwainNative\Twain32Native.cs" />
+    <Compile Include="ScanAPI\TwainNative\TwainCapability.cs" />
+    <Compile Include="ScanAPI\TwainNative\TwainConstants.cs" />
+    <Compile Include="ScanAPI\TwainNative\TwainResult.cs" />
+    <Compile Include="ScanAPI\TwainNative\TwainType.cs" />
+    <Compile Include="ScanAPI\TwainNative\TwainVersion.cs" />
+    <Compile Include="ScanAPI\TwainNative\Units.cs" />
+    <Compile Include="ScanAPI\TwainNative\UserInterface.cs" />
+    <Compile Include="ScanAPI\Win32\BitmapInfoHeader.cs" />
+    <Compile Include="ScanAPI\Win32\BitmapRenderer.cs" />
+    <Compile Include="ScanAPI\Win32\Gdi32Native.cs" />
+    <Compile Include="ScanAPI\Win32\Kernel32Native.cs" />
+    <Compile Include="ScanAPI\Win32\User32Native.cs" />
+    <Compile Include="ScanAPI\Win32\WindowsMessage.cs" />
     <Compile Include="Services\Interfaces\ICacheService.cs" />
     <Compile Include="Expressions\ISearchExpressionProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
