--- a/AdminModule/AdminModule.csproj
+++ b/AdminModule/AdminModule.csproj
@@ -77,6 +77,7 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Fluent.Ribbon.3.6.1.236\lib\net45\System.Windows.Interactivity.dll</HintPath>
       <Private>True</Private>
@@ -114,12 +115,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Model\SecurityObjectType.cs" />
+    <Compile Include="Model\UserDTO.cs" />
     <Compile Include="Module.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\Interface\IUserAccessService.cs" />
+    <Compile Include="Services\Implementation\UserAccessService.cs" />
     <Compile Include="ViewModels\AdminEmptyViewModel.cs" />
     <Compile Include="ViewModels\ReportTemplateEditorViewModel.cs" />
     <Compile Include="ViewModels\ReportTemplatesManagerViewModel.cs" />
     <Compile Include="ViewModels\AdminHeaderViewModel.cs" />
+    <Compile Include="ViewModels\UserAccess\PermissionGroupViewModel.cs" />
+    <Compile Include="ViewModels\UserAccess\PermissionViewModel.cs" />
+    <Compile Include="ViewModels\UserAccess\UserAccessManagerViewModel.cs" />
+    <Compile Include="ViewModels\UserAccess\UserViewModel.cs" />
     <Compile Include="Views\AdminHeaderView.xaml.cs">
       <DependentUpon>AdminHeaderView.xaml</DependentUpon>
     </Compile>
@@ -128,6 +137,9 @@
     </Compile>
     <Compile Include="Views\ReportTemplatesManagerView.xaml.cs">
       <DependentUpon>ReportTemplatesManagerView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\UserAccess\UserAccessManagerView.xaml.cs">
+      <DependentUpon>UserAccessManagerView.xaml</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -151,6 +163,10 @@
       <Project>{cf75cde2-002c-4113-824a-03a3b7c6847b}</Project>
       <Name>Core</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Shared\Shared.Patient\Shared.Patient.csproj">
+      <Project>{5d4698bd-6256-4bc5-a566-be7cd9a840bb}</Project>
+      <Name>Shared.Patient</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Shell.Shared\Shell.Shared.csproj">
       <Project>{4e0d997f-374e-43be-9617-8da82504b7c8}</Project>
       <Name>Shell.Shared</Name>
@@ -168,6 +184,10 @@
     <Page Include="Views\ReportTemplatesManagerView.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\UserAccess\UserAccessManagerView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
   </ItemGroup>
   <ItemGroup />
