--- a/Core.Wpf/Core.Wpf.csproj
+++ b/Core.Wpf/Core.Wpf.csproj
@@ -133,7 +133,7 @@
     <Compile Include="MarkupExtensions\Int32Extension.cs" />
     <Compile Include="Misc\BeforeSelectionChangedEventData.cs" />
     <Compile Include="Misc\CommandWrapper.cs" />
-    <Compile Include="Misc\ISuggestionProvider.cs" />
+    <Compile Include="Misc\ISuggestionsProvider.cs" />
     <Compile Include="Misc\InputHelpers\DigitsInputHelper.cs" />
     <Compile Include="Misc\FileServiceActions.cs" />
     <Compile Include="Misc\FileServiceFilters.cs" />
