--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -227,9 +227,7 @@
   <ItemGroup>
     <Resource Include="Resources\Images\ConfigurationSettings256x256.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Services\Implementations\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Resource Include="Resources\Images\AttachDocument48x48.png" />
     <Resource Include="Resources\Images\DetachDocument48x48.png" />
@@ -292,6 +290,9 @@
     <Resource Include="Resources\Images\RelativesAdd48x48.png" />
     <Resource Include="Resources\Images\RelativesSearch48x48.png" />
     <Resource Include="Resources\Images\Search48x48.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\Users48x48.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
